--- a/src/constants/variables.scss
+++ b/src/constants/variables.scss
@@ -1,3 +1,6 @@
+$accent-color: #666;
+$background-color: #ddd;
+
 $border-radius: 10px;
 
 $sm: 540px;
@@ -6,4 +9,18 @@ $sm: 540px;
     -webkit-box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
+}
+
+@mixin scrollbar() {
+    &::-webkit-scrollbar {
+        width: 2px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: $background-color;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: $accent-color;
+    }
 }
